@@ -10,12 +10,8 @@
   </head>
   <body>
     <%%# application layout styled for Twitter Bootstrap 2.3 %>
-    <header class="navbar navbar-fixed-top">
-      <nav class="navbar-inner">
-        <div class="container">
-          <%%= render 'layouts/navigation' %>
-        </div>
-      </nav>
+    <header>
+      <%%= render 'layouts/navigation' %>
     </header>
     <main role="main">
       <div class="container">
