@@ -1,3 +1,10 @@
-<ul class="nav">
-  <li><%= link_to 'Home', root_path %></li>
-</ul>
+<%# navigation styled for Twitter Bootstrap 2.3 %>
+<div class="navbar navbar-fixed-top">
+  <nav class="navbar-inner">
+    <div class="container">
+      <ul class="nav">
+        <%= render 'layouts/navigation_links' %>
+      </ul>
+    </div>
+  </nav>
+</div>
