@@ -1,2 +1,6 @@
-%ul.nav
-  %li= link_to 'Home', root_path
+-# navigation styled for Twitter Bootstrap 2.3
+.navbar.navbar-fixed-top
+  %nav.navbar-inner
+    .container
+      %ul.nav
+      = render 'layouts/navigation_links'
