@@ -11,21 +11,7 @@
   <body>
     <%%# application layout styled for Twitter Bootstrap 3.0 %>
     <header>
-      <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-          </div>
-          <div class="collapse navbar-collapse">
-            <%%= render 'layouts/navigation' %>
-          </div>
-        </div>
-      </nav>
+      <%%= render 'layouts/navigation' %>
     </header>
     <main role="main">
       <div class="container">
