@@ -13,15 +13,7 @@
   <body>
     <%%# application layout styled for Zurb Foundation 4 %>
     <header>
-      <nav class="top-bar">
-        <ul class="title-area">
-          <li class="name"><!-- add site name or logo here --></li>
-          <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-        </ul>
-      <section class="top-bar-section">
-        <%%= render 'layouts/navigation' %>
-      </section>
-    </nav>
+      <%%= render 'layouts/navigation' %>>
     </header>
     <main role="main">
       <div class="container">
