@@ -1,3 +1,12 @@
-<ul>
-  <li><%= link_to 'Home', root_path %></li>
-</ul>
+<%# navigation styled for Zurb Foundation 4 %>
+<nav class="top-bar">
+  <ul class="title-area">
+    <li class="name"><!-- add site name or logo here --></li>
+    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+  </ul>
+  <section class="top-bar-section">
+    <ul>
+      <%= render 'layouts/navigation_links' %>
+    </ul>
+  </section>
+</nav>
