@@ -1,2 +1,11 @@
-%ul
-  %li= link_to 'Home', root_path
+-# navigation styled for Zurb Foundation 4
+%nav.top-bar
+  %ul.title-area
+    %li.name
+      -# add site name or logo here
+    %li.toggle-topbar.menu-icon
+      %a{:href => "#"}
+        %span Menu
+  %section.top-bar-section
+    %ul
+      = render 'layouts/navigation_links'
