@@ -1,0 +1,2 @@
+-# add navigation links to this file
+%li= link_to 'Home', root_path
