@@ -1,3 +1,3 @@
 <ul class="nav">
-  <li><%= link_to 'Home', root_path %></li>
+  <%= render 'layouts/navigation_links' %>
 </ul>
