@@ -1,2 +1,2 @@
 %ul.nav
-  %li= link_to 'Home', root_path
+  = render 'layouts/navigation_links'
