@@ -1,3 +1,3 @@
 module RailsLayout
-  VERSION = "0.3.0"
+  VERSION = "0.4.0"
 end
