@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h3. 0.4.0 November 9, 2013
+
+* separate file for navigation links; isolate framework-specific markup in navigation partial
+
 h3. 0.3.0 November 9, 2013
 
 * create a file 'framework_and_overrides' instead of 'bootstrap_and_overrides' or 'foundation_and_overrides'
